Minor Fixes * Fix popup for sumbit button #13 * Fix topmost letter full display #13 * Fix website nav icon to "Why Love Ruby" #13 * Alignment of upvote count and user-info #13 * Fix meta tags for SEO #13 * Add favicon #13 * Twitter handle is link to twitter profile #13 * Add share via twitter button #13 * Fix alignment in recents section #13 * Truncate the username displayed in the recent section #13

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -26,11 +26,15 @@ span.welcome{
   li{
     width:100%;
     .voteCount{
+      display: flex;
+      flex-direction: column;
+      align-content: flex-end;
+      justify-content: flex-end;
       .countNumber{
+        float: left;
         height:25px;
         font-size:20px;
         padding-top: 10px;
-        width: 50px;
         text-align: center;
       }
       a{
@@ -38,16 +42,29 @@ span.welcome{
       }
     }
     .personalInfo{
+      display: flex;
+      flex-direction: row;
+      align-content: flex-end;
+      justify-content: flex-end;
+
       .names{
         text-align:right;
         padding-right:5px;
+      }
+      .imageWrapper{
+        height: 48px;
+        padding: 6px;
+
       }
     }
   }
   .letterDescription{
     max-height:200px;
     overflow:hidden;
-  }  
+  }
+  .letterDescription43{
+    overflow: hidden;
+  }
 }
 
 .recentsTable{
